--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   story_view: ^0.14.0
   firebase_core: ^2.14.0
   cloud_firestore: ^4.8.2
+  firebase_auth: ^4.6.3
+  fluttertoast: ^8.2.2
 
 dev_dependencies:
   flutter_test:
